Fix hero spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,7 @@ a {
     /* max-width: 1000px; */
     padding: 50px 0;
     align-items: center;
+    gap: 1em;
 }
 
 .hero-body {
